CREATE TABLE "users"
(
  "username"            varchar PRIMARY KEY,
  "role"                varchar        NOT NULL DEFAULT 'depositor',
  "hashed_password"     varchar        NOT NULL,
  "full_name"           varchar        NOT NULL,
  "email"               varchar UNIQUE NOT NULL,
  "is_email_verified"   bool           NOT NULL DEFAULT false,
  "password_changed_at" timestamptz    NOT NULL DEFAULT '0001-01-01',
  "created_at"          timestamptz    NOT NULL DEFAULT (now())
);

CREATE TABLE "verify_emails"
(
  "id"          bigserial PRIMARY KEY,
  "username"    varchar     NOT NULL,
  "email"       varchar     NOT NULL,
  "secret_code" varchar     NOT NULL,
  "is_used"     bool        NOT NULL DEFAULT false,
  "created_at"  timestamptz NOT NULL DEFAULT (now()),
  "expired_at"  timestamptz NOT NULL DEFAULT (now() + interval '15 minutes')
);

CREATE TABLE "accounts"
(
  "id"         bigserial PRIMARY KEY,
  "owner"      varchar     NOT NULL,
  "balance"    bigint      NOT NULL,
  "currency"   varchar     NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "entries"
(
  "id"         bigserial PRIMARY KEY,
  "account_id" bigint      NOT NULL,
  "amount"     bigint      NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "transfers"
(
  "id"              bigserial PRIMARY KEY,
  "from_account_id" bigint      NOT NULL,
  "to_account_id"   bigint      NOT NULL,
  "amount"          bigint      NOT NULL,
  "created_at"      timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "sessions"
(
  "id"            uuid PRIMARY KEY,
  "username"      varchar     NOT NULL,
  "refresh_token" varchar     NOT NULL,
  "user_agent"    varchar     NOT NULL,
  "client_ip"     varchar     NOT NULL,
  "is_blocked"    boolean     NOT NULL DEFAULT false,
  "expires_at"    timestamptz NOT NULL,
  "created_at"    timestamptz NOT NULL DEFAULT (now())
);

CREATE INDEX ON "accounts" ("owner");

CREATE UNIQUE INDEX ON "accounts" ("owner", "currency");

CREATE INDEX ON "entries" ("account_id");

CREATE INDEX ON "transfers" ("from_account_id");

CREATE INDEX ON "transfers" ("to_account_id");

CREATE INDEX ON "transfers" ("from_account_id", "to_account_id");

COMMENT
ON COLUMN "entries"."amount" IS 'can be negative or positive';

COMMENT
ON COLUMN "transfers"."amount" IS 'must be positive';

ALTER TABLE "verify_emails"
  ADD FOREIGN KEY ("username") REFERENCES "users" ("username");

ALTER TABLE "accounts"
  ADD FOREIGN KEY ("owner") REFERENCES "users" ("username");

ALTER TABLE "entries"
  ADD FOREIGN KEY ("account_id") REFERENCES "accounts" ("id");

ALTER TABLE "transfers"
  ADD FOREIGN KEY ("from_account_id") REFERENCES "accounts" ("id");

ALTER TABLE "transfers"
  ADD FOREIGN KEY ("to_account_id") REFERENCES "accounts" ("id");

ALTER TABLE "sessions"
  ADD FOREIGN KEY ("username") REFERENCES "users" ("username");

